--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":  "webpack serve --mode development --env development --hot --port 3000"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "webpack": "^5.28.0",
-    "webpack-dev-server": "^3.11.2"
-  },
   "devDependencies": {
-    "webpack-cli": "^4.6.0"
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "description": ""
 }
