--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":  "webpack serve --mode development --env development --hot --port 3000"
+    "make": "webpack --mode development",
+    "server": "webpack serve --mode development --env development --hot --port 3000"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,11 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2"
+  }
 }
