--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
